examples/test/testpolicy19098.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19098
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key26: value41
      key31: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value24
          key6: value3
      podSelector:
        matchLabels:
          key3: value21
          key17: value5
